added release dates

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -4,6 +4,7 @@ HdpH Release History
 HdpH 0.2.3
 ----------
 
+Date:     16 Dec 2014
 Packages: hdph-0.2.3, hdph-closure-0.2.1, hdph-mpi-allgather-0.0.3
 Compiler: GHC 7.8 or GHC 7.6
 Notes:    Transitional release;
@@ -13,5 +14,7 @@ Notes:    Transitional release;
 HdpH 0.2.2
 ----------
 
+Date:     6 Sep 2014
 Packages: hdph-0.2.2, hdph-closure-0.2.0, hdph-mpi-allgather-0.0.2
 Compiler: GHC 7.6
+Notes:    Release to go with the Haskell 2014 paper.
